# figuras-sdl

./: .gitignore  configure.ac
data/: Makefile.am
src/: Makefile.am  figuras.c
